@@ -1,18 +1,9 @@
 package org.lazywizard.lazylib.combat;
 
 import com.fs.starfarer.api.combat.ArmorGridAPI;
-import com.fs.starfarer.api.combat.BoundsAPI;
-import com.fs.starfarer.api.combat.CollisionClass;
-import com.fs.starfarer.api.combat.FluxTrackerAPI;
-import com.fs.starfarer.api.combat.MutableShipStatsAPI;
 import com.fs.starfarer.api.combat.ShieldAPI;
 import com.fs.starfarer.api.combat.ShipAPI;
-import com.fs.starfarer.api.combat.ShipHullSpecAPI;
-import com.fs.starfarer.api.combat.ShipSystemAPI;
-import com.fs.starfarer.api.combat.ShipVariantAPI;
-import com.fs.starfarer.api.combat.WeaponAPI;
 import java.awt.Color;
-import java.util.List;
 import org.lazywizard.lazylib.CollisionUtils;
 import org.lazywizard.lazylib.MathUtils;
 import org.lwjgl.util.vector.Vector2f;
@@ -23,31 +14,21 @@ import org.lwjgl.util.vector.Vector2f;
  * @author LazyWizard
  * @since 1.5
  */
-// TODO: Add JavaDoc to this class
 public class DefenseUtils
 {
     /** A constant that represents a point not in a ship's armor grid. */
     public static final float NOT_IN_GRID = -12345.9876f;
 
-    public static void main(String[] args)
-    {
-        System.out.println("{");
-        for (int x = 0; x <= 9; x++)
-        {
-            for (int y = 0; y <= 4; y++)
-            {
-                System.out.print((y == 0 ? "{ " : "")
-                        + x + "." + y + "f"
-                        + (y == 4 ? " },\n" : ", "));
-            }
-        }
-        System.out.println("}\n\n");
-
-        System.out.println(getArmorCellAtWorldCoord(
-                new TestShip(new Vector2f(5f, 10f), 50f),
-                new Vector2f(0f, 3f)));
-    }
-
+    /**
+     * Get the {@link ArmorGridAPI} coordinate of a worldspace {@link Vector2f}.
+     *
+     * @param ship The {@link ShipAPI} whose {@link ArmorGridAPI} we will use.
+     * @param loc The world coordinates to be translated to armor grid coordinates.
+     * @return A {@link Vector2f} containing the {@link ArmorGridAPI} coordinates
+     * equivalent to {@code loc}, or {@code null} if {@code loc} isn't in the
+     * grid's bounds.
+     * @since 1.5
+     */
     public static Vector2f getArmorCellAtWorldCoord(ShipAPI ship, Vector2f loc)
     {
         // Analyze armor grid
@@ -60,7 +41,6 @@ public class DefenseUtils
         System.out.println("Location (raw): " + loc);
 
         // Rotate location to adjust for ship facing
-        // FIXME: Rotation is incorrect
         Vector2f cell = new Vector2f(loc);
         float angle = MathUtils.getAngle(ship.getLocation(), cell)
                 - (ship.getFacing() - 90f);
@@ -93,6 +73,17 @@ public class DefenseUtils
         return cell;
     }
 
+    /**
+     * Get the armor value of a {@link ShipAPI} at a location. Equivalent
+     * to {@link ArmorGridAPI#getArmorValue(int, int)}, but using
+     * world-space coordinates.
+     *
+     * @param ship The {@link ShipAPI} whose {@link ArmorGridAPI} we will use.
+     * @param loc The world location we will be checking the armor value at.
+     * @return The armor value at {@code loc}, or {@link DefenseUtils#NOT_IN_GRID}
+     * if the point isn't within {@code ship}'s {@link ArmorGridAPI}.
+     * @since 1.5
+     */
     public static float getArmorValue(ShipAPI ship, Vector2f loc)
     {
         Vector2f cell = getArmorCellAtWorldCoord(ship, loc);
@@ -105,6 +96,16 @@ public class DefenseUtils
         return ship.getArmorGrid().getArmorValue((int) cell.x, (int) cell.y);
     }
 
+    /**
+     * Get the total damage taken by a {@link ShipAPI}'s armor at a location.
+     *
+     * @param ship The {@link ShipAPI} whose {@link ArmorGridAPI} we will use.
+     * @param loc The world location we will be checking the armor damage at.
+     * @return The armor damage taken at {@code loc}, or
+     * {@link DefenseUtils#NOT_IN_GRID} if the point isn't within
+     * {@code ship}'s {@link ArmorGridAPI}.
+     * @since 1.5
+     */
     public static float getArmorDamage(ShipAPI ship, Vector2f loc)
     {
         Vector2f cell = getArmorCellAtWorldCoord(ship, loc);
@@ -118,6 +119,17 @@ public class DefenseUtils
                 - ship.getArmorGrid().getArmorValue((int) cell.x, (int) cell.y));
     }
 
+    /**
+     * Get the armor level of a {@link ShipAPI} at a location. Equivalent
+     * to {@link ArmorGridAPI#getArmorLevel(int, int)}, but using
+     * world-space coordinates.
+     *
+     * @param ship The {@link ShipAPI} whose {@link ArmorGridAPI} we will use.
+     * @param loc The world location we will be checking the armor level at.
+     * @return The armor level at {@code loc}, or {@link DefenseUtils#NOT_IN_GRID}
+     * if the point isn't within {@code ship}'s {@link ArmorGridAPI}.
+     * @since 1.5
+     */
     public static float getArmorLevel(ShipAPI ship, Vector2f loc)
     {
         Vector2f cell = getArmorCellAtWorldCoord(ship, loc);
@@ -130,405 +142,42 @@ public class DefenseUtils
         return (ship.getArmorGrid().getArmorFraction((int) cell.x, (int) cell.y));
     }
 
+    /**
+     * Determine what {@link DefenseType} is present at a specific location
+     * on a {@link ShipAPI}.
+     *
+     * @param ship The {@link ShipAPI} to examine.
+     * @param loc The location to check at.
+     * @return The {@link DefenseType} present at {@code loc}.
+     * @since 1.5
+     */
     public static DefenseType getDefenseAtPoint(ShipAPI ship, Vector2f loc)
     {
+        // Point is not in bounds or ship's phase cloak is active
         if (!CollisionUtils.isPointWithinBounds(loc, ship)
                 || (ship.getPhaseCloak() != null && ship.getPhaseCloak().isActive()))
         {
             return DefenseType.PHASE_OR_MISS;
         }
 
+        // Shield is active and point is in arc
         ShieldAPI shield = ship.getShield();
         if (shield != null && shield.isOn() && shield.isWithinArc(loc))
         {
             return DefenseType.SHIELD;
         }
 
+        // Armor value at this point is more than 0
         if (getArmorValue(ship, loc) > 0f)
         {
             return DefenseType.ARMOR;
         }
 
+        // No defenses present, just bare hull
         return DefenseType.HULL;
     }
 
     private DefenseUtils()
     {
-    }
-
-    private static class TestShip implements ShipAPI
-    {
-        private float facing;
-        private Vector2f location;
-        private ArmorGridAPI grid = new TestArmorAPI();
-
-        public TestShip(Vector2f location, float facing)
-        {
-            this.location = location;
-            this.facing = facing;
-        }
-
-        @Override
-        public ArmorGridAPI getArmorGrid()
-        {
-            return grid;
-        }
-
-        @Override
-        public Vector2f getLocation()
-        {
-            return location;
-        }
-
-        @Override
-        public float getFacing()
-        {
-            return facing;
-        }
-
-        @Override
-        public BoundsAPI getExactBounds()
-        {
-            return null;
-        }
-
-        @Override
-        public float getCollisionRadius()
-        {
-            return 30f;
-        }
-
-        //<editor-fold defaultstate="collapsed" desc="Unimplemented">
-        @Override
-        public String getFleetMemberId()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public Vector2f getMouseTarget()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isShuttlePod()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isDrone()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isFighter()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isFrigate()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isDestroyer()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isCruiser()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isCapital()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public HullSize getHullSize()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipAPI getShipTarget()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public int getOriginalOwner()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public MutableShipStatsAPI getMutableStats()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isHulk()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public List<WeaponAPI> getAllWeapons()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipSystemAPI getPhaseCloak()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipSystemAPI getSystem()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void setShield(ShieldAPI.ShieldType type, float shieldUpkeep, float shieldEfficiency, float arc)
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipHullSpecAPI getHullSpec()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipVariantAPI getVariant()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void useSystem()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public FluxTrackerAPI getFluxTracker()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public List<ShipAPI> getWingMembers()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipAPI getWingLeader()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public boolean isWingLeader()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public List<ShipAPI> getDeployedDrones()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShipAPI getDroneSource()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public Object getWingToken()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public Vector2f getVelocity()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void setFacing(float facing)
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public float getAngularVelocity()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void setAngularVelocity(float angVel)
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public int getOwner()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void setOwner(int owner)
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public CollisionClass getCollisionClass()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void setCollisionClass(CollisionClass collisionClass)
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public float getMass()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public void setMass(float mass)
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public ShieldAPI getShield()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public float getHullLevel()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public float getHitpoints()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-
-        @Override
-        public float getMaxHitpoints()
-        {
-            throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
-        }
-        //</editor-fold>
-
-        public class TestArmorAPI implements ArmorGridAPI
-        {
-            float[][] armorGrid =
-            {
-                {
-                    0.0f, 0.1f, 0.2f, 0.3f, 0.4f
-                },
-                {
-                    1.0f, 1.1f, 1.2f, 1.3f, 1.4f
-                },
-                {
-                    2.0f, 2.1f, 2.2f, 2.3f, 2.4f
-                },
-                {
-                    3.0f, 3.1f, 3.2f, 3.3f, 3.4f
-                },
-                {
-                    4.0f, 4.1f, 4.2f, 4.3f, 4.4f
-                },
-                {
-                    5.0f, 5.1f, 5.2f, 5.3f, 5.4f
-                },
-                {
-                    6.0f, 6.1f, 6.2f, 6.3f, 6.4f
-                },
-                {
-                    7.0f, 7.1f, 7.2f, 7.3f, 7.4f
-                },
-                {
-                    8.0f, 8.1f, 8.2f, 8.3f, 8.4f
-                },
-                {
-                    9.0f, 9.1f, 9.2f, 9.3f, 9.4f
-                },
-            };
-
-            @Override
-            public float getArmorRating()
-            {
-                return 400f;
-            }
-
-            @Override
-            public float getMaxArmorInCell()
-            {
-                return 400f;
-            }
-
-            @Override
-            public float getArmorFraction(int cellX, int cellY)
-            {
-                return armorGrid[cellX][cellY] / getMaxArmorInCell();
-            }
-
-            @Override
-            public float getArmorValue(int cellX, int cellY)
-            {
-                if (cellX < 0 || cellY >= armorGrid.length
-                        || cellY < 0 || cellY >= armorGrid[0].length)
-                {
-                    return DefenseUtils.NOT_IN_GRID;
-                }
-
-                return armorGrid[cellX][cellY];
-            }
-
-            @Override
-            public float[][] getGrid()
-            {
-                return armorGrid;
-            }
-
-            @Override
-            public float getCellSize()
-            {
-                return 2f;
-            }
-        }
     }
 }
