@@ -3,7 +3,8 @@
 Re-added DefenseType enumeration (contains HULL, ARMOR, SHIELD, PHASE_OR_MISS)
 Added AnchoredEntity:
  - Alternative implementation of CombatEntityAPI that follows and rotates
-   alongside another CombatEntityAPI (the anchor)
+   alongside another CombatEntityAPI (the 'anchor')
+ - Includes a working getVelocity() implementation, unlike SimpleEntity
 Added DefenseUtils:
  - Contains methods to convert between world and armor grid coordinates
  - Can check what DefenseType is present at a specific point on a ship
@@ -14,7 +15,8 @@ Changes to CollisionUtils:
  - Fixed bug with isPointInBounds() and points exactly on the boundary edges
 Changes to MathUtils:
  - Added equals(float a, float b), tests for 99.99999+% equality of floats
- - Added getRandom(), returns the random generator used by LazyLib
+ - Added getRandom(), returns an instance of java.util.Random
+   (this is the RNG used by LazyLib if you wanted to do seed manipulation)
 Changes to WeaponUtils:
  - New methods to check how much damage you would deal to a specific target:
  - Added calculateActualDamage(float baseDamage, WeaponAPI weapon,
@@ -25,6 +27,7 @@ Changes to WeaponUtils:
    DefenseType defense)
  - Added calculateDamagePerBurst(WeaponAPI weapon, ShipAPI target,
    DefenseType defense)
+ - These methods are not 100% accurate yet, still tracking down some oddities
 
  1.4 (May 06, 2013)
 ====================
